Formulario de Puestos - Crear, Editar, Visualizar, Eliminar. Aplicación de filtros, ordenamiento y búsqueda.

--- a/CreArte/Views/Login/Login.cshtml
+++ b/CreArte/Views/Login/Login.cshtml
@@ -37,7 +37,7 @@
         <div class="right-panel">
             <div class="form-wrapper">
                 <h1 class="fw-bold text-center">Bienvenido</h1>
-                <br></br>
+                <br>
 
                 <!-- Resumen de validación para errores generales (usuario/contraseña) -->
                 <div asp-validation-summary="ModelOnly" class="text-warning mt-3"></div>
@@ -78,7 +78,7 @@
                     </div> *@
 
                     <div class="mb-3">
-                        <a href="@Url.Action("CambiarContrasena", "Login")"
+                        <a href="@Url.Action("RecuperarContrasena", "Login")"
                            class="text-white text-decoration-underline">¿Has olvidado tu contraseña?</a>
                     </div>
 
